# AuClear

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build.yml
docs/: 01-architecture.md  02-rack-modules.md  03-ai-and-stems.md  04-ui-design.md  05-visualizations.md  06-tech-stack-build.md  07-roadmap.md  BUILDING.md
models/: gate.onnx  identity.onnx
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ai/: AIEngine.cpp  AIEngine.h  OnnxSession.cpp  OnnxSession.h  ReBlocker.h
src/dsp/: BiquadFilter.h  EnvelopeFollower.h  GoniometerFifo.h  LoudnessMeter.h  SpectrumFifo.h
src/engine/: CommandQueue.h  MeterBus.h  ModuleFactory.cpp  ModuleFactory.h  PresetManager.cpp  PresetManager.h  ProcessorRack.cpp  ProcessorRack.h  RackModule.h  RealtimeStemProcessor.cpp  RealtimeStemProcessor.h  StemPlayer.cpp  StemPlayer.h  StemState.h  UndoHistory.cpp  UndoHistory.h
src/io/: FileProcessor.cpp  FileProcessor.h
src/modules/: CompressorModule.cpp  CompressorModule.h  DeEsserModule.cpp  DeEsserModule.h  DelayModule.cpp  DelayModule.h  DenoiseModule.cpp  DenoiseModule.h  DynamicEQModule.cpp  DynamicEQModule.h  GainModule.cpp  GainModule.h  GateModule.cpp  GateModule.h  HumRemoverModule.cpp  HumRemoverModule.h  LimiterModule.cpp  LimiterModule.h  MultibandCompressorModule.cpp  MultibandCompressorModule.h  ParametricEQModule.cpp  ParametricEQModule.h  ReverbModule.cpp  ReverbModule.h  SaturatorModule.cpp  SaturatorModule.h  SpectralRepairModule.cpp  SpectralRepairModule.h  StereoWidthModule.cpp  StereoWidthModule.h  TransientShaperModule.cpp  TransientShaperModule.h  UtilityModule.cpp  UtilityModule.h
src/offline/: ArtifactCache.cpp  ArtifactCache.h  DemucsRunner.cpp  DemucsRunner.h  DemucsSession.cpp  DemucsSession.h  OfflineJob.h  OfflineJobManager.cpp  OfflineJobManager.h
src/ui/: AnalogPalette.cpp  AnalogPalette.h  AuClearLookAndFeel.h  EQCurveDisplay.h  FileProcessorPanel.h  GRMeter.h  GoniometerDisplay.h  HeaderComponent.cpp  HeaderComponent.h  InspectorPanel.h  MainStage.cpp  MainStage.h  MediaPlayerPanel.h  MeterBridge.cpp  MeterBridge.h  RackColumn.cpp  RackColumn.h  RackModuleCard.cpp  RackModuleCard.h  SpectrumAnalyzer.h  StemRemixPanel.h
src/ui/panels/: CompressorPanel.h  DeEsserPanel.h  DelayPanel.h  DenoisePanel.h  DownloadThread.h  DynamicEQPanel.h  EQPanel.h  GainPanel.h  GatePanel.h  HumRemoverPanel.h  LimiterPanel.h  MultibandCompressorPanel.h  PanelHelpers.h  ReverbPanel.h  SaturatorPanel.h  SpectralRepairPanel.h  StereoWidthPanel.h  TransientShaperPanel.h  UtilityPanel.h
tools/: export_demucs.py  export_denoise_model.py  make_test_model.py
